# Avant-ticket

Contracts/: Cargo.toml
Contracts/concert/: BUILD_INSTRUCTIONS.md  CONTRACT_DOCUMENTATION.md  EXAMPLE_CREATE_EVENT.md  FLUJO_COMPLETO.md  build.rs
Contracts/concert/app/src/: lib.rs
Contracts/concert/examples/: create_event_example.rs  flujo_completo_example.rs
Contracts/ticket-marketplace/: Cargo.toml  INTEGRATION_GUIDE.md  README.md  TICKET_CONTRACT_MODIFICATIONS.md  build.rs
Contracts/ticket-marketplace/app/: Cargo.toml
Contracts/ticket-marketplace/app/src/: lib.rs
Contracts/ticket-marketplace/client/: Cargo.toml  build.rs
Contracts/ticket-marketplace/client/src/: lib.rs
Contracts/ticket-marketplace/src/: lib.rs
Contracts/vnft-manager/app/src/: lib.rs
Contracts/vnft-manager/app/src/clients/: extended_vnft_client.rs
Contracts/vnft-manager/app/src/services/: mod.rs  ticket_service.rs  vnft_manager_service.rs
Contracts/vnft-manager/app/src/states/: mod.rs  ticket_state.rs
backend/: .dockerignore  Dockerfile  README.DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260109213500_initicial/: migration.sql
backend/prisma/migrations/20260110174337_add_auth_fields/: migration.sql
backend/prisma/migrations/20260113195936_add_events_properity/: migration.sql
backend/prisma/migrations/20260113200315_add_events_end_time/: migration.sql
backend/prisma/migrations/20260113222744_add_events_zones/: migration.sql
backend/prisma/migrations/20260113225958_add_events_zones/: migration.sql
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/amplify/: amplify.controller.spec.ts  amplify.controller.ts  amplify.module.ts  amplify.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/dto/: login.dto.ts  (+1 more)
backend/src/blockchain/: blockchain-actions.service.ts  blockchain-connection.service.ts  blockchain-event-listener.service.ts  blockchain-sync.service.ts  blockchain-worker.service.ts  blockchain.controller.ts  blockchain.module.ts  global.d.ts  lib.ts
backend/src/common/: common.module.ts
backend/src/events/: events.controller.ts  events.module.ts  events.service.ts
backend/src/marketplace/: marketplace.controller.ts  marketplace.module.ts  marketplace.service.ts
backend/src/mercado-pago/: mercado-pago.controller.ts  mercado-pago.module.ts  mercado-pago.service.ts
backend/src/oxapay/: oxapay.controller.spec.ts  oxapay.controller.ts  oxapay.module.ts  oxapay.service.spec.ts  oxapay.service.ts
backend/src/payments/: payments.controller.ts  payments.module.ts  payments.service.ts
backend/src/prisma/: prisma.service.ts
backend/src/scanner/: scanner.controller.ts  scanner.module.ts  scanner.service.ts
backend/src/tickets/: tickets.controller.ts  tickets.module.ts  tickets.service.ts
backend/src/users/: users.controller.ts  users.service.ts
front-end/: package-lock.json  package.json
front-end/app/: layout.tsx  page.tsx
front-end/app/(admin)/: layout.tsx  page.tsx
front-end/app/(buyer)/: layout.tsx
front-end/app/(organizer)/: layout.tsx
front-end/app/(public)/: layout.tsx
front-end/app/settings/: page.tsx
front-end/components/layout/: Navbar.tsx
front-end/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CheckBox.tsx  Image.tsx  Input.tsx  Label.tsx  Loading.tsx  Separator.tsx  Switch.tsx  Tab.tsx
front-end/lib/api/: auth.ts  client.ts  events.ts  index.ts  marketplace.ts  mercadopago.ts  oxapay.ts  payments.ts  tickets.ts
front-end/lib/auth/: context.tsx  guards.tsx
front-end/lib/qr/: generator.ts
front-end/lib/types/: index.ts
scanner/: .env  App.tsx  app.json  cesconfig.jsonc  package-lock.json  package.json
scanner/src/auth/: authService.ts  authStore.ts
scanner/src/offline-db/: db.ts  ticketRepository.ts
scanner/src/qr-validator/: qrValidator.ts
scanner/src/scanner/: scannerService.ts
scanner/src/screens/: EventSelectScreen.tsx  LoginScreen.tsx  Root.tsx  ScannerScreen.tsx  SyncStatusScreen.tsx
scanner/src/services/: api.ts  network.ts  permissions.ts  storage.ts
scanner/src/sync-engine/: syncService.ts
scanner/src/types/: shims.d.ts
(+48 files in other folders)
