[workspace]
resolver = "2"

# Keep in the lexicographic order!
# Remove a member if it's used as a dependency in the workspace.

members = [
    "concert",
    "ticket-marketplace",
]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
documentation = "https://dapps.gear.rs"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
# Local contracts
# Keep in the lexicographic order!


# Local states
# Keep in the lexicographic order!


# Local IO-crates
# Keep in the lexicographic order!


# Local libraries
# Keep in the lexicographic order!

rmrk-types.path = "rmrk/types"

# Gear

gstd = "=1.9.2"
gear-wasm-builder = "=1.9.2"
gclient = "=1.9.2"
gtest = "=1.9.2"
gear-core = "=1.9.2"
sails-idl-gen = "=0.9.2"
sails-rs = "=0.9.2"
sails-client-gen = "=0.9.2"
session-service = { git = "https://github.com/gear-foundation/signless-gasless-session-service.git" }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vnft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vmt-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vmt = { git = "https://github.com/gear-foundation/standards/"}
extended-vft = { git = "https://github.com/gear-foundation/standards/"}
extended-vnft = { git = "https://github.com/gear-foundation/standards/"}

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "21.0.0", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "10", default-features = false }
tokio = "1"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
quote = "1"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

# ZK-specific dependencies
ark-bls12-381 = "0.5.0"
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-scale = "=0.0.12"
ark-serialize = "0.5.0"
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }
ark-std = "0.5"
gbuiltin-bls381 = "1.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "2.0.1"
rand = "0.9.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
