[package]
name = "ticket-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ticket-marketplace-app = { path = "app" }

[build-dependencies]
ticket-marketplace-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
ticket-marketplace = { path = ".", features = ["wasm-binary"] }
ticket-marketplace-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
wasm-binary = []

